Update TorrentListPage.java
don't throw when search result only has magnet